infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec: #this the spec of the deployment
  replicas: 1
  selector:           #this to till the deployment where exactly are the pods or helps it finds them
    matchLabels:
      app: client
  template:       #when we say template here is the pad config
    metadata:
      labels:
        app: client
    spec:      #this is the spec of  the pad
      containers:
        - name: client
          image: jerry377/client:latest  #if we remove the version tag it will assume that it is the latest one
--- # you can create more than one object inside of the same config file but why because the clusterIP service is to just for the event-bust
#deployment so we can add it in the same file
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP #you could not add it and it will be the default
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
