infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec: #this the spec of the deployment
  replicas: 1
  selector:           #this to till the deployment where exactly are the pods or helps it finds them
    matchLabels:
      app: event-bus
  template:       #when we say template here is the pad config
    metadata:
      labels:
        app: event-bus
    spec:      #this is the spec of  the pad
      containers:
        - name: event-bus
          image: jerry377/event-bus:latest  #if we remove the version tag it will assume that it is the latest one
--- # you can create more than one object inside of the same config file but why because the clusterIP service is to just for the event-bust
#deployment so we can add it in the same file
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP #you could not add it and it will be the default
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
