infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec: #this the spec of the deployment
  replicas: 1
  selector:           #this to till the deployment where exactly are the pods or helps it finds them
    matchLabels:
      app: moderation
  template:       #when we say template here is the pad config
    metadata:
      labels:
        app: moderation
    spec:      #this is the spec of  the pad
      containers:
        - name: moderation
          image: jerry377/moderation:latest  #if we remove the version tag it will assume that it is the latest one
--- # you can create more than one object inside of the same config file but why because the clusterIP service is to just for the event-bust
#deployment so we can add it in the same file
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP #you could not add it and it will be the default
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
